# Painter

./: Cargo.toml
examples/: imgui.rs  support.rs
resources/: notes.md  std.stn  test.stn  z_shadows.stn
src/: color.rs  lib.rs  number.pest  style.rs
