[package]
name = "painter"
version = "0.1.0"
authors = ["Ash Walker <ash@ashwalker.net>"]

[dependencies]
architect = { git = "https://github.com/SignalWalker/Architect", rev = "4a99de0305e1c035831bbba2684258044d6fe722" }
lightcycle = { git = "https://github.com/SignalWalker/LightCycle" }
rusttype = "^0.7"
pest = "^2"
pest_derive = "^2"
