[package]
name = "painter"
version = "0.1.0"
authors = ["Ash Walker <ash@ashwalker.net>"]
edition = "2018"

[dependencies]
#architect = { path = "../architect" }

[dev-dependencies]
gfx = "0.18"
gfx_window_glutin = "0.30"
glutin = "0.20"
imgui = "*"
imgui-gfx-renderer = "*"
imgui-winit-support = "*"
winit = "^0.19"